--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ snowflake-ml-python==1.6.2
 snowflake-snowpark-python==1.22.1
 streamlit==1.38.0
 streamlit-folium==0.22.0
+streamlit-pdf-viewer==0.0.18
+matplotlib==3.7.5
+python-dotenv==1.0.1
 
 
 
