--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,3 +5,7 @@ SACCOUNT2="sibsego-vub12130"
 
 SUSER1="mrinalsnow1"
 SACCOUNT1="sltfmgk-dp79513"
+
+
+SUSER="mrinalsnow"
+SACCOUNT="qhrcajp-zqb54406"
